--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
             <h3 style="font-size: 18px;">Noll tillsatser av något slag. IT'S A MUST.</h3>
             <p style="font-size: 15px;">Vi tror på att en äppelmust ska vara just en äppelmust. Inte en flaska med massa tillsatser för att efterlikna en smak av äpplen. En äppelmust ska vara en smak av naturen.</p>
             <p style="font-size: 15px;">Därför är IT'S A MUSTs äppelmust gjord helt på vildvuxna äpplen från svenska trädgårdar.</p>
-            <p style="font-size: 15px;">Du kan dricka IT'S A MUSTs äppelmust med gott samvete med kunskapen av att vår must ör producerad på äpplen som annars hade gått förlorade denna säsong. Äpplen från din grannes vackra äppelträd som din granne inte haft tid eller varit intresserad av att plocka; och <b><a style="text-decoration: none; color: white;" href="#blåmärksfrukt">blåmärksfrukt</a></b> från dina lokala livsmedelsbutiker som annars skulle gått till spillo.</p>
+            <p style="font-size: 15px;">Du kan dricka IT'S A MUSTs äppelmust med gott samvete med kunskapen av att vår must ör producerad på äpplen som annars hade gått förlorade denna säsong. Äpplen från din grannes vackra äppelträd som din granne inte haft tid eller varit intresserad av att plocka; och <b><a style="text-decoration: none; color: white;" href="#blåmärksfrukt">räddad frukt</a></b> från dina lokala livsmedelsbutiker som annars skulle gått till spillo.</p>
             <p style="font-size: 15px;">Så tacka din granne när du nästa gång öppnar en äppelmust från oss för den naturliga och underbart goda smak. Självklart ska du även ge dig själv beröm för att du precis bidragit till att minska matsvinnet i Sverige genom att ha utnyttjat din trogne grannes äpplen.</p>
           </div>
         </div>
@@ -104,7 +104,7 @@
             </p>
 
             <h2>Våra samarbetspartners.</h2>
-            <p style="font-size: 15px;">Vi får självklart inte glömma att tacka vår underbara samarbetspartner; Humlegårdens Ekolager, som har sponsrat och hjälpt oss igenom denna resa. Utan dem skulle det inte vara möjligt.</p>
+            <p style="font-size: 15px;">Vi får självklart inte glömma att tacka vår underbara samarbetspartner; <b><a style="color: black;" href="https://shop.humle.se/">Humlegårdens Ekolager</a></b>, som har sponsrat och hjälpt oss igenom denna resa. Utan dem skulle det inte vara möjligt.</p>
             <p style="font-size: 15px;">Vi vill självklart också tacka alla andra samarbetspartners, livsmedelsbutiker och äppeldonatorer som vi inte kunnat klara oss utan i denna resa.</p>
           </div>
         </div>
@@ -117,23 +117,35 @@
       <div id="tagpåmust" class="info-1">
         <div id="container3" class="info-container info-container-2">
           <div id="blåmärksfrukt" class="info-background">
-            <h2>Vad är blåmärksfrukt?</h2>
-            <p style="font-size: 15px;">Blåmärksfrukt är frukt som inte är tillräckligt bra för att sälja i livsmedelsbutiker. Ofta handlar det om att frukten är för ful, för böjd, för liten eller för stor eller har fått ett blåmärke. Denna typ av frukt är det sällan något egentligt fel på, men som livsmedelsbutiker inte kan sälja. Detta såg vi som en enorm möjlighet att kunna minska fruktsvinnet. </p>
-            <h2>Vad för priser har ni?</h2>
-            <h3 style="font-size: 18px;">Vi har mycket konkurrenskraftiga priser. </h3>
-            <p style="font-size: 15px;"><a style="text-decoration: none; color: black;" href="product-1.html">Äppelmust - Originalet (33cl) : 22 kr</a></p>
+            <h2>Vad är räddad frukt?</h2>
+            <p style="font-size: 15px;">Räddad frukt finns i flera kategorier. En som är blåmärksfrukt som är frukt som inte är tillräckligt bra för att sälja i livsmedelsbutiker. Ofta handlar det om att frukten är för ful, för böjd, för liten eller för stor eller har fått ett blåmärke. Denna typ av frukt är det sällan något egentligt fel på, men som livsmedelsbutiker inte kan sälja. Detta såg vi som en enorm möjlighet att kunna minska fruktsvinnet. </p>
+            <h2>FAQ</h2>
+            <h3 style="font-size: 18px;">Vanliga frågor och svar</h3>
+            <p style="font-size: 15px; margin-bottom: 0;"><b>Hur länge håller musten?</b></p>
+            <p style="font-size: 15px;">Tack vare vår noggranna och försiktiga tillverkningsprocess håller alla våra produkter i ett år, från tillverkningsdag. I vårt fall går alla mustprodukter ut: 10-10-21. Produkterna håller i en månad öppnad.</p>
+
+            <p style="font-size: 15px; margin-bottom: 0;"><b>Hur kan musten vara så himla god?</b></p>
+            <p style="font-size: 15px;">Tyvärr har vi ett hemligt recept som vi inte kan dela med oss av.</p>
+
+            <p style="font-size: 15px; margin-bottom: 0;"><b>Hur kan jag köpa musten?</b></p>
+            <p style="font-size: 15px;"><a style="color:black;" href="#container4">Läs här.</a</p>
+
+            <p style="font-size: 15px;margin-bottom: 0;"><b>Kommer det fler Äpple & Kanel om den tar slut?</b></p>
+            <p style="font-size: 15px;">Vi hoppas på att kunna tillverka mer om den tar slut. Får vi bra feedback på </p>
+
+            <!-- <p style="font-size: 15px;"><a style="text-decoration: none; color: black;" href="product-1.html">Äppelmust - Originalet (33cl) : 22 kr</a></p>
             <p style="font-size: 15px;"><a style="text-decoration: none; color: black;" href="product-2.html">Äppelmust - med smak av kanel (33cl) : 25 kr</a></p>
-            <p style="font-size: 15px;"><a style="text-decoration: none; color: black;" href="product-3.html">Bag in Box (300cl) : 99 kr</a></p>
+            <p style="font-size: 15px;"><a style="text-decoration: none; color: black;" href="product-3.html">Bag in Box (300cl) : 99 kr</a></p> -->
           </div>
         </div>
         <div id="container4" class="info-container info-container-2">
           <div class="info-background-2">
-            <h2 >Hur får jag tag på musten?</h2>
-            <p style="font-size: 15px;">För tillfället är inte vår webbshop uppe. Detta innebär att det enda sättet för dig att njuta av vår underbart goda äppelmust är antingen genom beställning via Instagram DM eller mejl.</p>
+            <h2 style="color: white;" >Hur får jag tag på musten?</h2>
+            <p style="font-size: 15px; color: white;">För tillfället är inte vår webbshop uppe. Detta innebär att det enda sättet för dig att njuta av vår underbart goda äppelmust är antingen genom beställning via Instagram DM eller mejl.</p>
             <br>
-            <h2>Kontakta oss.</h2>
-            <p style="font-size: 15px;">Har du något på hjärtat? Kanske undrar du hur vi kan ha så konkurrenskraftiga priser? Eller så kanske du undrar hur vi får till det lilla extra i vår must som skiljer oss från andra? Oavsett vad det gäller tveka inte att höra av dig!</p>
-            <p>E-post: <b><a style="text-decoration: none; color: white;" href="mailto: info.itsamust@gmail.com">itsamust.uf@gmail.com</a></b></p>
+            <h2 style="color: white;">Kontakta oss.</h2>
+            <p style="font-size: 15px; color: white;">Har du något på hjärtat? Kanske undrar du hur vi kan ha så konkurrenskraftiga priser? Eller så kanske du undrar hur vi får till det lilla extra i vår must som skiljer oss från andra? Oavsett vad det gäller tveka inte att höra av dig!</p>
+            <p style="color: white;"><a style="text-decoration: none; color: white;" href="mailto: info.itsamust@gmail.com">E-post:<b> itsamust.uf@gmail.com</a></b></p>
             <p>Instagram: <b>@<a style="text-decoration: none; color: white;" href="https://www.instagram.com/itsamust.uf/" target="_blank">itsamust.uf</a></b></p>
           </div>
         </div>
