--- a/product-1.html
+++ b/product-1.html
@@ -66,6 +66,7 @@
       </a>
     </div>
   </nav>
+
   <div  class="skew-c-top"></div>
   <div class="topBtm-block top-block">
     <div class="info-outer-container">
@@ -105,11 +106,15 @@
             <p style="font-size: 15px;">En läcker must gjort på 100% räddade äpplen. Perfekt för dig som vill släcka din törst eller enbart njuta av en god dryck. Ett nyttigare och godare alternativ istället för läsk. Denna produkt är enbart gjord på räddadfrukt från svenska trädgårdar och livsmedelsbutiker där frukten annars skulle slängas. </p>
             <p style="font-size: 15px;">Du kan dricka denna underbart goda must med mycket gott samvete med kunskapen om att du hjälper till att minska fruktsvinnet.</p>
             <br>
-            <div style="margin-top: 50px; " class="fade-in h2Container-läsmer">
+            <p><b>Pris:</b> 29kr</p>
+            <p style="color: green;">50+ finns i lager</p>
+            <div style="margin-top: 50px; " class="h2Container-läsmer">
               <div class="h2TextContainer">
-                <a href="about.html">
+                <button id="myBtn" class="h2TextBlock h2TextBlock-läsmer">KÖP</button>
+
+                <!-- <a href="about.html#blåmärksfrukt">
                   <h2 style="font-size: 20px; width: 200px;" class="h2TextBlock h2TextBlock-läsmer">KÖP</h2>
-                </a>
+                </a> -->
               </div>
             </div>
           </div>
@@ -117,7 +122,22 @@
       </div>
     </div>
   </div>
+  <!-- The modal -->
+  <div id="myModal" class="modal">
+    <!-- Modal content -->
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <h2>Hur köper jag?</h2>
+      <p>För tillfället går det endast att beställa via Instagram DM och mejl.</p>
+      <p>Vänligen notera att det kan ta upp till 24h för oss att genomföra din order. </p>
+      <p style="color: black;"><a class="media-link" style="text-decoration: none; color: black;" href="mailto: info.itsamust@gmail.com?subject=Beställning&body=Hej! Jag skulle vilja lägga en beställning! ">E-post:<b> itsamust.uf@gmail.com</a></b>&nbsp;/&nbsp;<a style="text-decoration: none; color: black;" href="https://www.instagram.com/itsamust.uf/" target="_blank">Instagram: <b>@itsamust.uf</b></a></p>
+      <h2>Leverans</h2>
+      <p>Vi erbjuder hemleverans för </p>
 
+
+    </div>
+
+  </div>
   <div class="skew-cc"></div>
   <div class="footer">
     <ul class="ul-footer">
@@ -155,11 +175,11 @@
 
   </div>
 
-  <script src="script.js" charset="utf-8"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="script.js" charset="utf-8"></script>
 
 </body>
 
