--- a/product-2.html
+++ b/product-2.html
@@ -105,9 +105,9 @@
             <p style="font-size: 15px;">Om du vill avnjuta en smarkrik dryck med smak av jul och vinter är denna produkt perfekt för dig. Äppelmusten är gjord 100% räddad frukt med inslag av kanel. Kanelen ger en ljuvlig julkänsla och tillsammans med äpplen bildar det en oemotståndlig kombination.</p>
             <p style="font-size: 15px;">Du kan dricka denna underbart goda must med mycket gott samvete med kunskapen om att du hjälper till att minska fruktsvinnet.</p>
             <br>
-            <div style="margin-top: 50px; " class="fade-in h2Container-läsmer">
+            <div style="margin-top: 50px; " class="h2Container-läsmer">
               <div class="h2TextContainer">
-                <a href="about.html">
+                <a href="about.html#blåmärksfrukt">
                   <h2 style="font-size: 20px; width: 200px;" class="h2TextBlock h2TextBlock-läsmer">KÖP</h2>
                 </a>
               </div>
