--- a/product-3.html
+++ b/product-3.html
@@ -99,15 +99,16 @@
         </div>
         <div class="info-container">
           <div class="info-background">
-            <h2>Äppelmust Originalet</h2>
-            <h3 style="font-size: 18px;">Rund och frisk smak av äpple.</h3>
+            <h2>Äppelmust Bag-in-Box</h2>
+            <h3 style="font-size: 18px;">Precis som originalet. Större format.</h3>
             <br>
-            <p style="font-size: 15px;">En läcker must gjort på 100% räddade äpplen. Perfekt för dig som vill släcka din törst eller enbart njuta av en god dryck. Ett nyttigare och godare alternativ istället för läsk. Denna produkt är enbart gjord på räddadfrukt från svenska trädgårdar och livsmedelsbutiker där frukten annars skulle slängas. </p>
+            <p style="font-size: 15px;">En läcker must gjort på 100% räddade äpplen. Perfekt för dig som vill släcka din törst eller enbart njuta av en god dryck. Ett nyttigare och godare alternativ istället för läsk. Denna produkt är enbart gjord på räddadfrukt från svenska trädgårdar och livsmedelsbutiker där frukten annars skulle slängas.</p>
             <p style="font-size: 15px;">Du kan dricka denna underbart goda must med mycket gott samvete med kunskapen om att du hjälper till att minska fruktsvinnet.</p>
+            <p style="font-size: 15px;"></p>
             <br>
-            <div style="margin-top: 50px; " class="fade-in h2Container-läsmer">
+            <div style="margin-top: 50px; " class="h2Container-läsmer">
               <div class="h2TextContainer">
-                <a href="about.html">
+                <a href="about.html#blåmärksfrukt">
                   <h2 style="font-size: 20px; width: 200px;" class="h2TextBlock h2TextBlock-läsmer">KÖP</h2>
                 </a>
               </div>
