--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div>
   </div>
   <div class="skew-cc"></div>
-  <div id="middle"  class="middle-block">
+  <div id="middle"  class="middle-about middle-block">
     <div class="text-block fade-in">
       <h2>Vår affärsidé.</h2>
       <h3 style="font-size: 18px;">Noll tillsatser av något slag. IT'S A MUST.</h3>
