--- a/about.html
+++ b/about.html
@@ -93,12 +93,8 @@
         <div id="container2" class="info-container info-container-2">
           <div class="info-background">
             <h2>Vår resa.</h2>
-            <p style="font-size: 16px;">
-              <em>Vi hade en dröm. En dröm där vi gjorde allt vi kunde för att minska fruktsvinnet. Vi är otroligt tacksamma och stolta över att kunna förverkliga den drömmen.
-            </em></p>
-            <br>
-            <p style="font-size: 15px;">Vi har samarbete med flertalet livsmedelsbutiker runt om i närområdet där vi får så kallad blåmärksfrukt. Vi har även plockat otroliga mängder räddad frukt från trädgårdar och äppelträd runt om i Västerort.</p>
-            <br>
+            <h3 style="font-size: 18px;">Vi hade en vison där vi kunde minska fruktsvinnet.</h3>
+            <p style="font-size: 15px;">Med vårt mål i sikte, kämpade vi för att få samarbete med flertalet livsmedelsbutiker runt om i närområdet där vi får så kallad blåmärksfrukt. Vi har även plockat otroliga mängder räddad frukt från trädgårdar och äppelträd runt om i Västerort.</p>
             <p style="font-size: 15px;">
               Med frukten samlad omvandlade vi den till en läcker och oslagbart god äppelmust. Du har väl sett vår Limited Edition Julmust? Äppelmust med smak av kanel; otroligt god!!
             </p>
@@ -118,20 +114,15 @@
         <div id="container3" class="info-container info-container-2">
           <div id="blåmärksfrukt" class="info-background">
             <h2>Vad är räddad frukt?</h2>
-            <p style="font-size: 15px;">Räddad frukt finns i flera kategorier. En som är blåmärksfrukt som är frukt som inte är tillräckligt bra för att sälja i livsmedelsbutiker. Ofta handlar det om att frukten är för ful, för böjd, för liten eller för stor eller har fått ett blåmärke. Denna typ av frukt är det sällan något egentligt fel på, men som livsmedelsbutiker inte kan sälja. Detta såg vi som en enorm möjlighet att kunna minska fruktsvinnet. </p>
+            <p style="font-size: 15px;">Räddad frukt går att dela upp i flera områden. Ett område är blåmärksfrukt, frukt som inte är tillräckligt bra eller fin för matjättarna att sälja i sina livsmedelsbutiker. Oftast handlar det om att frukten är för ful, för böjd, för liten eller för stor, eller har fått ett blåmärke. Denna typ av frukt är det nästintill aldrig något egentligt fel på, men vi kontrollerar noga innan vi använder denna frukt ändå! Vi såg jättarnas matsvinn som en enorm möjlighet för oss att kunna ta vara på det som inte passar in hos dem, och istället omvandla frukten till en fantastiskt god äppelmust.  </p>
+            <p style="font-size: 15px;">En annan kategori är äpplen och frukt från trädgårdar där ägaren inte alls är intresserad av att plocka äpplena. Även detta öppnar upp en enorm möjlighet för oss att rädda frukt som annars skulle gå till spillo.</p>
             <h2>FAQ</h2>
             <h3 style="font-size: 18px;">Vanliga frågor och svar</h3>
             <p style="font-size: 15px; margin-bottom: 0;"><b>Hur länge håller musten?</b></p>
-            <p style="font-size: 15px;">Tack vare vår noggranna och försiktiga tillverkningsprocess håller alla våra produkter i ett år, från tillverkningsdag. I vårt fall går alla mustprodukter ut: 10-10-21. Produkterna håller i en månad öppnad.</p>
-
-            <p style="font-size: 15px; margin-bottom: 0;"><b>Hur kan musten vara så himla god?</b></p>
-            <p style="font-size: 15px;">Tyvärr har vi ett hemligt recept som vi inte kan dela med oss av.</p>
-
-            <p style="font-size: 15px; margin-bottom: 0;"><b>Hur kan jag köpa musten?</b></p>
-            <p style="font-size: 15px;"><a style="color:black;" href="#container4">Läs här.</a</p>
+            <p style="font-size: 15px;">Tack vare vår noggranna och försiktiga tillverkningsprocess håller alla våra produkter i 10 månader, från tillverkningsdag. I vårt fall går alla mustprodukter ut: 10-08-21. Öppnad produkt håller i en månad.</p>
 
             <p style="font-size: 15px;margin-bottom: 0;"><b>Kommer det fler Äpple & Kanel om den tar slut?</b></p>
-            <p style="font-size: 15px;">Vi hoppas på att kunna tillverka mer om den tar slut. Får vi bra feedback på </p>
+            <p style="font-size: 15px;">Vi hoppas på att kunna tillverka mer om den tar slut.</p>
 
             <!-- <p style="font-size: 15px;"><a style="text-decoration: none; color: black;" href="product-1.html">Äppelmust - Originalet (33cl) : 22 kr</a></p>
             <p style="font-size: 15px;"><a style="text-decoration: none; color: black;" href="product-2.html">Äppelmust - med smak av kanel (33cl) : 25 kr</a></p>
