--- a/product-3.html
+++ b/product-3.html
@@ -106,11 +106,15 @@
             <p style="font-size: 15px;">Du kan dricka denna underbart goda must med mycket gott samvete med kunskapen om att du hjälper till att minska fruktsvinnet.</p>
             <p style="font-size: 15px;"></p>
             <br>
+            <p><b>Pris:</b> 125kr</p>
+            <p style="color: red;">Slut i lager</p>
             <div style="margin-top: 50px; " class="h2Container-läsmer">
               <div class="h2TextContainer">
-                <a href="about.html#blåmärksfrukt">
+                <button id="myBtn" class="h2TextBlock h2TextBlock-läsmer">KÖP</button>
+
+                <!-- <a href="about.html#blåmärksfrukt">
                   <h2 style="font-size: 20px; width: 200px;" class="h2TextBlock h2TextBlock-läsmer">KÖP</h2>
-                </a>
+                </a> -->
               </div>
             </div>
           </div>
